# cpsa

./: Makefile  README.md  pyproject.toml  ~$SA - Business and Data Understanding Document.dotx  ~$ta Quality Risks.docx
cpsa/: __init__.py  dataset.py  features.py  plots.py
cpsa/modeling/: predict.py  train.py
docs/: 00_data_consolidation.ipynb  CPSA - Business and Data Understanding Document.dotx  CPSA-Data Preparation and Modeling Report V1.docx  CPSA-Data Preparation and Modeling Report.docx  DataDictionary042022.xlsx  Girl.docx  Start a new repository.docx  mkdocs.yml  ~$SA - Business and Data Understanding Document.dotx  ~$SA-Data Preparation and Modeling Report V1.docx  ~$SA-Data Preparation and Modeling Report.docx
docs/docs/: index.md
models/: neiss_XGboost.joblib  neiss_decision_tree.joblib  neiss_logistic_regression.joblib  neiss_naive_bayes.joblib
notebooks/: 00_data_consolidation.ipynb  01_EDA_understanding_data.ipynb  01_Initial EDA & Understanding_data.ipynb  01_initial EDA & data understanding.ipynb  02_Data Cleaning & Feature Engineering.ipynb  02_EDA & Data Cleaning.ipynb  03_Feature Engineering & Encoding.ipynb  03_split_data.ipynb  04_feature engineering & encoding.ipynb  05_baseline model.ipynb  06_decision_tree.ipynb  07_random_forest.ipynb  08_XGBoost.ipynb  08_naive_bayes.ipynb  09_XGBoost.ipynb  09_compare_models.ipynb  10_compare_models.ipynb  ds.csv  rare_products_1.csv
notebooks/archive/: 04_Split_data_v0.ipynb  08_naive_bayes.ipynb
references/: CONTEXT.md  DataDictionary042022.xlsx  README.md  ~$DataDictionary042022.xlsx
