[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cpsa"
version = "0.0.1"
description = "Develop predictive models to identify which consumer product injuries are most likely to result in hospitalization and determine what factors\u2014product categories, demographics, injury characteristics\u2014predict severe medical outcomes among emergency department cases, producing evidence-based findings that inform CSRI's 2025 Product Safety Spotlight report and contribute to public understanding of consumer product safety priorities."
authors = [
  { name = "Anand Divakaran" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "awscli",
    "black",
    "category-encoders>=2.9.0",
    "duckdb>=1.4.4",
    "flake8",
    "imblearn>=0.0",
    "ipython",
    "isort",
    "joblib>=1.5.3",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "nbstripout>=0.9.0",
    "notebook",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas",
    "pip",
    "pyarrow>=23.0.0",
    "pytest",
    "python-calamine>=0.6.1",
    "python-dotenv",
    "scikit-learn",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm",
    "typer",
    "wordcloud>=1.9.6",
    "xgboost>=3.1.3",
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["cpsa"]
force_sort_within_sections = true


